--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@coinbase/onchainkit": "^0.38.13",
     "@langchain/core": "^0.3.57",
     "@langchain/openai": "^0.5.11",
+    "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-query": "^5.80.5",
     "chart.js": "^4.5.0",
     "next": "15.3.3",
