Adiciona botão com dropdown para conexão de carteiras e atualiza ClientProviders, package.json e package-lock.json

--- a/package.json
+++ b/package.json
@@ -12,32 +12,34 @@
     "@coinbase/agentkit": "^0.8.0",
     "@coinbase/agentkit-langchain": "^0.3.0",
     "@coinbase/onchainkit": "^0.38.13",
-    "@langchain/core": "^0.3.57",
-    "@langchain/openai": "^0.5.11",
-    "@supabase/supabase-js": "^2.52.0",
-    "@tanstack/react-query": "^5.80.5",
+    "@langchain/core": "^0.3.58",
+    "@langchain/openai": "^0.5.12",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.59.13",
+    "@wagmi/connectors": "^5.1.15",
+    "@wagmi/core": "^2.17.3",
     "chart.js": "^4.5.0",
-    "next": "15.3.3",
-    "openai": "^5.1.0",
+    "next": "^15.3.3",
+    "openai": "^5.1.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "viem": "^2.29.2",
-    "wagmi": "^2.15.2"
+    "viem": "^2.21.35",
+    "wagmi": "^2.16.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "pino-pretty": "^10.0.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "webpack": "^5.99.9"
+    "@eslint/eslintrc": "^3.1.0",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.12.0",
+    "eslint-config-next": "^15.3.3",
+    "pino-pretty": "^11.2.2",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0"
   }
 }
