--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@coinbase/onchainkit": "^0.38.13",
     "@langchain/core": "^0.3.58",
     "@langchain/openai": "^0.5.12",
-    "@supabase/supabase-js": "^2.45.4",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-query": "^5.59.13",
     "@wagmi/connectors": "^5.1.15",
     "@wagmi/core": "^2.17.3",
