--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@wagmi/connectors": "^5.1.15",
     "@wagmi/core": "^2.17.3",
     "chart.js": "^4.5.0",
+    "ethers": "^6.15.0",
     "next": "^15.3.3",
     "openai": "^5.1.1",
     "react": "^18.3.1",
