--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@coinbase/onchainkit": "^0.38.13",
     "@langchain/core": "^0.3.58",
     "@langchain/openai": "^0.5.12",
-    "@supabase/auth-helpers-react": "^0.5.0",
+    "@simplewebauthn/types": "^12.0.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-query": "^5.59.13",
     "@wagmi/connectors": "^5.1.15",
@@ -23,11 +24,12 @@
     "ethers": "^6.15.0",
     "next": "^15.3.3",
     "openai": "^5.1.1",
+    "qr": "^0.5.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "viem": "^2.21.35",
+    "viem": "^2.33.0",
     "wagmi": "^2.16.0"
   },
   "devDependencies": {
